[package]
name = "lan-files-transfers"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.7.1"
chrono = "0.4.38"
env_logger = "0.11.5"
fibers = "0.1.13"
fibers_global = "0.1.2"
figment = { version = "0.10.19", features = ["json"] }
futures-util = "0.3.30" 
http = "1.1.0"
hyper = { version="1.4.1",features=["full"]}
local-ip-address = "0.6.1"
log = "0.4.22"
qrcode = "0.14.1"
rustun = "0.5.0"
serde = {version="1.0.208",features=["derive","serde_derive"]}
serde_json = "1.0.125"
tokio ={ version="1.39.2",features=["full"]}
warp = "0.3.7"
